--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins/beaengine"]
 	path = plugins/beaengine
-	url = git://github.com/carterjones/beaengine-fork.git
+	url = https://github.com/carterjones/beaengine-fork.git
