--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "plugins/beaengine-cs"]
 	path = plugins/beaengine-cs
 	url = https://github.com/carterjones/beaengine-cs.git
+[submodule "plugins/distorm3cs"]
+	path = plugins/distorm3cs
+	url = https://github.com/carterjones/distorm3cs.git
