--- a/Bunseki/Bunseki.csproj
+++ b/Bunseki/Bunseki.csproj
@@ -78,6 +78,10 @@
       <Project>{C8241D75-0AA1-419D-A423-175FB36E4E34}</Project>
       <Name>BeaEngineCS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\plugins\distorm3cs\Distorm3cs\Distorm3cs.csproj">
+      <Project>{27C84C77-6F54-481F-8598-639AC768753D}</Project>
+      <Name>Distorm3cs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
