--- a/Bunseki/Bunseki.csproj
+++ b/Bunseki/Bunseki.csproj
@@ -74,11 +74,11 @@
     <Compile Include="InstructionArgument.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\plugins\beaengine-cs\BeaEngineCS\BeaEngineCS.csproj">
+    <ProjectReference Include="..\..\beaengine-cs\BeaEngineCS\BeaEngineCS.csproj">
       <Project>{C8241D75-0AA1-419D-A423-175FB36E4E34}</Project>
       <Name>BeaEngineCS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\plugins\distorm3cs\Distorm3cs\Distorm3cs.csproj">
+    <ProjectReference Include="..\..\distorm3cs\Distorm3cs\Distorm3cs.csproj">
       <Project>{27C84C77-6F54-481F-8598-639AC768753D}</Project>
       <Name>Distorm3cs</Name>
     </ProjectReference>
