--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -54,6 +54,9 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -81,8 +84,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>copy $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-32.dll $(TargetDir)BeaEngine-32.dll
-copy $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-64.dll $(TargetDir)BeaEngine-64.dll</PostBuildEvent>
+    <PostBuildEvent>if exist $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-32.dll copy $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-32.dll $(TargetDir)BeaEngine-32.dll
+if exist $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-64.dll copy $(SolutionDir)plugins\beaengine\$(ConfigurationName)\BeaEngine-64.dll $(TargetDir)BeaEngine-64.dll</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
