update stylecop settings

--- a/BeaEngineCS/BeaEngineCS.csproj
+++ b/BeaEngineCS/BeaEngineCS.csproj
@@ -56,7 +56,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BeaEngine.cs" />
+    <Compile Include="BeaEngine.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
