--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins/beaengine"]
 	path = plugins/beaengine
-	url = git@gitlab.com:carterjones/beaengine-mirror.git
+	url = https://gitlab.com/carterjones/beaengine-mirror.git
